# btproxy

./: ARCHITECTURE.md  Cargo.toml  DETAIL_DESIGN.md  README.md  TODO.md
apps/btproxy-client/: Cargo.toml
apps/btproxy-client/src/: main.rs
apps/btproxy-server/: Cargo.toml
apps/btproxy-server/src/: main.rs
crates/btlink/: Cargo.toml
crates/btlink/src/: lib.rs  link.rs
crates/btlink/src/linux/: mod.rs  rfcomm.rs
crates/btlink/src/windows/: mod.rs  rfcomm.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  logging.rs  net.rs
crates/mux/: Cargo.toml
crates/mux/src/: codec.rs  frame.rs  handshake.rs  keepalive.rs  lib.rs  session.rs  stream.rs
crates/proxy_http/: Cargo.toml
crates/proxy_http/src/: lib.rs  server.rs
crates/socks5/: Cargo.toml
crates/socks5/src/: client.rs
