[package]
name = "btproxy-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
btlink = { path = "../../crates/btlink" }
common = { path = "../../crates/common" }
clap.workspace = true
mux = { path = "../../crates/mux" }
proxy_http = { path = "../../crates/proxy_http" }
tokio.workspace = true
tracing.workspace = true
