[package]
name = "btlink"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
common = { path = "../common" }
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Networking_WinSock"] }
