[package]
name = "mux"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
btlink = { path = "../btlink" }
common = { path = "../common" }
rand.workspace = true
sha2.workspace = true
hmac.workspace = true
tokio.workspace = true
tracing.workspace = true
